--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-.idea
-.venv
-agrosite/__pycache__/
-agroskill/__pycache__/
+venv/
+*/migrations/0*.py
+*.secret
+staticfiles/
+*.log
+.idea/
+/__pycache__/
+*.session
+db.sqlite3
+.coverage
+build/
+pip-cache/
+.env
+*.bak
+static
+media
